--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <td>
         <h1> Daniel Vanzulli</h1>
         <p><em>Future Engineer<a href="https://www.linkedin.com/in/avanzulli/"> LinkedIn Profile</a></em> </p>
-        <p>Currently working as an Estimator for a Cabinet company</p>
+        <p>Currently working as an Estimator for a Manufacturing company</p>
       </td>
     </tr>
   </table>
