--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   <hr />
   <h3>Products Sold</h3>
   <ul>
-    <li>Kitchen Cabinets</li>
     <li>Commercial Cabinet</li>
   </ul>
   <hr />
@@ -49,7 +48,7 @@
         <table cellspacing = 10>
         <tr>
           <td>
-            Programming
+            HTML
           </td>
           <td>
             ⭐⭐⭐
@@ -65,7 +64,7 @@
           </tr>
           <tr>
             <td>
-              HTML
+              Python
             </td>
             <td>
               ⭐⭐⭐
