--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </tr>
           <tr>
             <td>
-              Python
+              Sales
             </td>
             <td>
               ⭐⭐⭐
